# BWLLM

./: .gitignore  PROCESS_FLOWCHART.md  README.md  README_APP.md  README_DOCUMENT_PROCESSING.md  Readme.md  Text_Extract.py  Text_extractor.py  Textextraktion.py  app.py  config.py  create_faiss.ipynb  create_faiss.py  docker-compose.yml  embed_kontext.py  embed_to_milvus.py  entity_Extractor.ipynb  example_usage.py  extract_entities.py  german_reports_chunks.pkl  german_reports_index.faiss  german_reports_metadata.pkl  inspect_chunks.py  langchain.ipynb  main.py  markdown_splitter.ipynb  pdf_extraction.ipynb  pipeline.py  process_markdown.ipynb  pyproject.toml  rag_chunking.py  rag_retrieve.ipynb  rag_system.py  rag_test_ragas.py  rag_usage_example.py  requirements.txt  requirements_streamlit.txt  retrieval.py  search_milvus.py  setup.py  (+12 more)
Enhanced_Text_Markdown/: BMW_2023_enhanced.md
Extrahierter_Text_Markdown/: BMW_2023.md  Continental_2023.md  Continental_2023_enriched.md  Continental_2023_small.md  Continental_2023_small_enriched.md  Daimler_2023.md  Daimler_Truck_Holding_2023.md  KnorrBremse_2023.md  Porsche_Automobil_2023.md  TRATON_2023.md  VW_2023.md
Table_extract/: BMW_2023_KPI.md  BMW_2023_all.md  BMW_2023_text.md  extract_KPI.ipynb  extract_text.ipynb
data/processed/: BMW_2023_processed.md  VW_2023_processed.md
faiss_index/: index.faiss  index.pkl
modules/: __init__.py  config.py  document_processor.py  embedding_manager.py  query_enhancer.py  rag_system.py  retriever.py
pages/: 1_📄_Retrieved_Chunks.py
src/: __init__.py  config.py  utils.py
(+27 files in other folders)
