[project]
name = "bwllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu==1.11.0",
    "langchain-community==0.3.23",
    "langchain-google-genai==2.1.5",
    "scikit-learn==1.6.1",
    "sentence-transformers==4.1.0",
    "spacy>=3.8.7",
    "streamlit==1.45.1",
]
